Possuir um rodapé Fix1

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 
 <body>
   <nav>
-  <head id="cabecalho"> <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
-  <a href="https://github.com/otacisos" target="_blank">Github</a>
+  <head id="cabecalho"> 
+    <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
+    <ul>
+      <li>
+        <a href="https://github.com/otacisos" target="_blank">Github</a></ul>
+      </li>
+      
+  </head>
+ 
   </nav>
+
   </head>
   <img id="minha_foto" src="miau.jpg">
   <article>
@@ -22,11 +30,11 @@
       de que obteremos a reação característica.
     </p>
   </article>
-  <footer id="rodape">Rodapé</footer>
-
+  <footer>
+    <p id="rodape">
+      Rodapé
+    </p>
   </footer>
 
-
 </body>
-
 </html>
