Criando blocos no css e usando o float

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         >Meu Github 👈</a
       >
       <a
-        id="link_github"
+        id="link_linkedin"
         href="https://www.linkedin.com/in/eugabrielcastro/"
         target="_blank"
-        >Linkedin 👈</a
+        >Meu Linkedin 👈</a
       >
 
       <section>
@@ -64,7 +64,8 @@
           </ul>
         </table>
       </section>
-
+    </main>
+    <section>
       <article>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -79,12 +80,10 @@
           It has survived not only five centuries, but also the leap into
           electronic typesetting, remaining essentially unchanged. It was
           popularised in the 1960s with the release of Letraset sheets
-          containing Lorem Ipsum passages, and more recently with desktop
-          publishing software like Aldus PageMaker including versions of Lorem
-          Ipsum.
+          containing Lorem Ipsum passages, and more recently with desktop.
         </p>
       </aside>
-    </main>
+    </section>
     <footer id="rodape"></footer>
   </body>
 </html>
