--- a/index.html
+++ b/index.html
@@ -11,19 +11,33 @@
     <h1 id="titulo">Lições Aprendidas [Blocos 1, 2 e 3] | Trybe</h1>
   </header>
   <main id="conteudo-principal">
-      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-      <ol id="licoes_aprendidas">
-        <li>Inteligência emocional</li>
-        <li>Empatia</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Box Model</li>
-        <li>Posicionamento</li>
-        <li>Organização</li>
-      </ol>
+    <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
+    <h2>Lições Aprendidas</h2>
+    <ol id="licoes_aprendidas">
+      <li>Inteligência emocional</li>
+      <li>Empatia</li>
+      <li>Bash</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Box Model</li>
+      <li>Posicionamento</li>
+      <li>Organização</li>
+    </ol>
+    <h2>Lições a Aprender</h2>
+    <ul id="licoes_a_aprender">
+      <li>Javascript</li>
+      <li>ReactJS</li>
+      <li>Banco de dados</li>
+      <li>REST</li>
+      <li>Segurança</li>
+      <li>Deploy</li>
+      <li>Python</li>
+      <li>Algoritmos</li>
+      <li>Estrutura de dados</li>
+      <li>Trabalho em equipe</li>
+    </ul>
   </main>
 </body>
 </html>
