Possuir um rodapé Fix2

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 <body>
   <nav>
-  <head id="cabecalho"> 
+  <head id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
     <ul>
       <li>
-        <a href="https://github.com/otacisos" target="_blank">Github</a></ul>
+
       </li>
-      
+
   </head>
- 
+
   </nav>
 
   </head>
@@ -30,11 +30,7 @@
       de que obteremos a reação característica.
     </p>
   </article>
-  <footer>
-    <p id="rodape">
-      Rodapé
-    </p>
-  </footer>
+  <footer id="rodape">Rodapé</footer>
 
 </body>
 </html>
