Usando flex no css

--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
     </header>
 
     <main>
-      <figure>
-        <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
-      </figure>
+      <div class="centralizar">
+        <figure>
+          <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
+        </figure>
 
-      <a
-        id="link_github"
-        href="https://github.com/GabriellCastro"
-        target="_blank"
-        >Meu Github 👈</a
-      >
-      <a
-        id="link_linkedin"
-        href="https://www.linkedin.com/in/eugabrielcastro/"
-        target="_blank"
-        >Meu Linkedin 👈</a
-      >
+        <a
+          id="link_github"
+          href="https://github.com/GabriellCastro"
+          target="_blank"
+          >Meu Github 👈</a
+        >
+        <a
+          id="link_linkedin"
+          href="https://www.linkedin.com/in/eugabrielcastro/"
+          target="_blank"
+          >Meu Linkedin 👈</a
+        >
+      </div>
 
       <section>
         <table>
