Possuir um rodapé Fix3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
     <ul>
       <li>
-
+        <a href="https://github.com/otacisos" target="_blank"> Github</a>
       </li>
 
   </head>
