Adicao de rodape

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
       <li>Trabalho em equipe</li>
     </ul>
   </main>
+  <footer id="rodape">
+      <small>Desenvolvido por <strong>Enio Nicael</strong></small>
+  </footer>
 </body>
 </html>
