--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <nav id="cabecalho">
     <h1 id="titulo">Perycles F.</h1>
     <ul>
-      <a href="https://github.com/PeryclesReis"><i class="fab fa-github-alt"></i></a>
-      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/peryclesreis/"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/PeryclesReis" target="_blank"><i class="fab fa-github-alt"></i></a>
+      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/peryclesreis/" target="_blank"><i class="fab fa-instagram"></i></a>
     </ul>
   </nav>
   <section class="imagem">
@@ -56,7 +56,6 @@
       <article id="article">
         <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
       </article>
-    
       <aside id="aside">
         <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
       </aside>
