Requsito 9 - aside, estrutura e style. Acrescentei tambem os 'arames' do layout

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <main id="conteudo-principal">
         <section class="secao">
             <img src="eu-redondo.svg" id="minha_foto" alt="Foto de Diogenes de frente, sorrindo, com fundo branco">
-            <article id="sobre_aprendizado">
-                <h2 class="sub-titulo-article">Meu apredizado na Trybe</h2>
-                <p>Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizes apenas de habilidades técnicas. Vai muito mais profundo. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. 
-                Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.</p>
+            <article class="sobre_aprendizado artigo">
+                <h2 class="titulo-article">Meu apredizado na Trybe</h2>
+                <p class="text-artigo">
+                    Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas. Vai muito mais profundo. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. 
+                    Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
+                </p>
             </article>
+            <div class="arame-base arame-um"></div>
+            <div class="arame-base arame-dois"></div>
+            <aside class="passagem_trybe">
+                <h2 class="titulo-article">#Vamoquevamo</h2>
+                <p class="text-artigo">
+                    É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei. Com medo? Sim! Mas que me tornará um novo programador e uma pessoa melhor!
+                </p>
+            </aside>
         </section>
     </main>
 </body>
