Barra superior com um título Fix7

--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
 </head>
 
 <body>
-  <nav>
-  <head id="cabecalho">
+  <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-    <ul>
-      <li>
-        <a href="https://github.com/otacisos" target="_blank"> Github</a>
-      </li>
+    <a href="https://github.com/otacisos" target="_blank"> Github</a>
+  </header>
 
-  </head>
-
-  </nav>
-
-  </head>
   <img id="minha_foto" src="miau.jpg">
   <article>
     <p>
