Corrigindo erros do reqeuisito 8 e 9 - tentativa 1

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <h2 class="sub-titulo">Trybe Course</h2>
     </header>
     <main id="conteudo-principal">
-        <section class="secao">
+        <div class="secao">
             <img src="eu-redondo.svg" id="minha_foto" alt="Foto de Diogenes de frente, sorrindo, com fundo branco">
+            <div class="arame-base arame-um"></div>
+            <div class="arame-base arame-dois"></div>
             <article class="sobre_aprendizado artigo">
                 <h2 class="titulo-article">Meu apredizado na Trybe</h2>
                 <p class="text-artigo">
@@ -23,15 +25,13 @@
                     Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
                 </p>
             </article>
-            <div class="arame-base arame-um"></div>
-            <div class="arame-base arame-dois"></div>
             <aside class="passagem_trybe">
                 <h2 class="titulo-article">#Vamoquevamo</h2>
                 <p class="text-artigo">
                     É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei. Com medo? Sim! Mas que me tornará um novo programador e uma pessoa melhor!
                 </p>
             </aside>
-        </section>
+        </div>
     </main>
 </body>
 </html>
