Artigo sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -47,27 +47,20 @@
     </div>
     <article id="artigo_aprendizado">
       <h2>Sobre meu aprendizado</h2>
-      <p>Desde criança, sempre gostei muito de tecnologia,  informática e artes marciais. Eu queria aprender a criar jogos e poder me divertir com eles, e ao mesmo tempo queria ser ator de filmes de artes marciais. Com 9 anos comecei a treinar TaeKwonDo. 
-      </p>
-      <p>
-        Como eu sempre busquei abraçar oportunidades que me apareciam, aos 16 anos consegui uma bolsa de estudos no SENAI-Petrópolis, para estudar marcenaria. Termindo o curso de marcenaria, engrenei em outro curso também no SENAI de instalação elétrica predial.
-      </p>
-      <p>
-        Com 23 anos conquistei a faixa preta, 1°Dan em TaeKwonDo. 
-      </p>
-      <img id="img_tkd" src="./img/Cris e Mestre tuyop.jpg" alt="Cristiano chutando no ar e seu mestre a frente">
-      <p>Na fase adulta foi quando consegui ter meu primeiro contato com os estudos acadêmicos e me deparei com uma matéria chamada "Programação 1" no curso de Petróleo e Gás, o qual me formei em 2014.
-      </p>
-      <p>
-        Agora em 2020 me deparei com a oportunidade de estudar na Trybe e finalmente obter todo o conhecimento necessário para ingressar na tão sonhada profissão de programador.
-      </p>
+      <p>Nessas duas semanas que estou na Trybe, sinto que algo de estranho está acontecendo. Algo que talvez um físico quântico possa tentar explicar.
+      O tempo aqui parece ter duas vertentes. Por um lado, sinto que o tempo passa muito rapido, pois quando vejo, o dia já acabou. Quando vejo, a semana ja passou. Temos a impressão de que o tempo voa, mas por outro lado, sinto que o aprendizado de uma semana, mas parece o aprendizado de um mês, ou dois meses de estudo.  </p>
     </article>
     <section>
-    
+      <h2>Primeiros desafios</h2>
+      <p>Meu primeiro desafio aconteceu já na semana inicial do curso. Meu Linux parou de funcionar. Tive que recorrer aos companheiros de turma. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
+      </p>
+      <aside>
+        <h3>"São os desafios que nos tiram da zona de conforto e nos elevam."</h3>
+      </aside>
     </section>
   </main>
   <footer id="rodape">
-    <h6>Cristiano L Duarte</h6>
+    <h6>Cristiano L Duarte, Desenvolvedor de software e web fullstack em desenvolvimento</h6>
   </footer>
 </body>
 </html>
