Corrigindo erros do reqeuisito 8 e 9 - tentativa 2

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <article class="sobre_aprendizado artigo">
                 <h2 class="titulo-article">Meu apredizado na Trybe</h2>
                 <p class="text-artigo">
-                    Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas. Vai muito mais profundo. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. 
-                    Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
+                    Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas, vai além. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
                 </p>
             </article>
             <aside class="passagem_trybe">
