Corrigindo erros dos requisitos 8 e 9 - tentativa 3

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2 class="sub-titulo">Trybe Course</h2>
     </header>
     <main id="conteudo-principal">
-        <div class="secao">
+        <section class="secao">
             <img src="eu-redondo.svg" id="minha_foto" alt="Foto de Diogenes de frente, sorrindo, com fundo branco">
             <div class="arame-base arame-um"></div>
             <div class="arame-base arame-dois"></div>
@@ -24,13 +24,15 @@
                     Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizer apenas de habilidades técnicas, vai além. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.
                 </p>
             </article>
-            <aside class="passagem_trybe">
-                <h2 class="titulo-article">#Vamoquevamo</h2>
-                <p class="text-artigo">
-                    É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei. Com medo? Sim! Mas que me tornará um novo programador e uma pessoa melhor!
-                </p>
-            </aside>
-        </div>
+            <section>
+                <aside class="passagem_trybe">
+                    <h2 class="titulo-article">#Vamoquevamo</h2>
+                    <p class="text-artigo">
+                        É certo que muitas das nossas grande escolhas nos geram medos e inseguranças. Mas escolher estar na Trybe foi e será a mais acertada que já tomei. Com medo? Sim! Mas que me tornará um novo programador e uma pessoa melhor!
+                    </p>
+                </aside>
+            </section>
+        </section>
     </main>
 </body>
 </html>
