--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
       de que obteremos a reação característica.
     </p>
+      <ol id="licoes_aprendidas">
+        <li>Aparou</li>
+        <li>numa</li>
+        <li>pipeta</li>
+        <li>gota</li>
+        <li>sangue</li>
+        <li>saiu</li>
+        <li>Agora</li>
+        <li>adiciono</li>
+        <li>esta</li>
+        <li>pequena</li>
+      </ol>
   </article>
   <footer id="rodape">Rodapé</footer>
 
