--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 </head>
 
 <body>
+
   <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
     <a href="https://github.com/otacisos" target="_blank"> Github</a>
   </header>
-
-  <img id="minha_foto" src="miau.jpg">
   <article>
+  <img id="minha_foto" src="miau.jpg">
     <p>
+      <table>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
       Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
       sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura, pois a
       proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
       de que obteremos a reação característica.
+      </table>
     </p>
+
       <ol id="licoes_aprendidas">
         <li>Aparou</li>
         <li>numa</li>
@@ -33,7 +36,9 @@
         <li>esta</li>
         <li>pequena</li>
       </ol>
+
   </article>
+
   <footer id="rodape">Rodapé</footer>
 
 </body>
