Ajuste em artigo, elemento aside

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id="cabecalho">
-  <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
   <main>
     <img id="minha_foto" src="./img/Cris1.jpeg" alt="">
@@ -50,11 +50,13 @@
       <p>Nessas duas semanas que estou na Trybe, sinto que algo de estranho está acontecendo. Algo que talvez um físico quântico possa tentar explicar.
       O tempo aqui parece ter duas vertentes. Por um lado, sinto que o tempo passa muito rapido, pois quando vejo, o dia já acabou. Quando vejo, a semana ja passou. Temos a impressão de que o tempo voa, mas por outro lado, sinto que o aprendizado de uma semana, mas parece o aprendizado de um mês, ou dois meses de estudo.  </p>
     </article>
-    <section>
-      <h2>Primeiros desafios</h2>
-      <p>Meu primeiro desafio aconteceu já na semana inicial do curso. Meu Linux parou de funcionar. Tive que recorrer aos companheiros de turma. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
-      </p>
-    </section>
+    <aside>
+      <section>
+        <h2>Primeiros desafios</h2>
+        <p>Meu primeiro desafio aconteceu já na semana inicial do curso. Meu Linux parou de funcionar. Tive que recorrer aos companheiros de turma. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
+        </p>
+      </section>
+    </aside>
   </main>
   <footer id="rodape">
     <h6>Cristiano L Duarte, Desenvolvedor de software e web fullstack em desenvolvimento</h6>
