Tabela à página Fix1

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
   <article>
   <img id="minha_foto" src="miau.jpg">
     <p>
-      <table>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
       Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
       sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura, pois a
       proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
       de que obteremos a reação característica.
-      </table>
     </p>
 
+    <aside>
       <ol id="licoes_aprendidas">
         <li>Aparou</li>
         <li>numa</li>
@@ -36,6 +35,7 @@
         <li>esta</li>
         <li>pequena</li>
       </ol>
+    </aside>
 
   </article>
 
