--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
         <li>pequena</li>
       </ol>
     </aside>
-
+    <table id="tabela">
+      <tr>
+        <th>Nome:</th>
+        <td>Otaciso</td>
+      </tr>
+      <tr>
+        <th>Idade:</th>
+        <td>32</td>
+      </tr>
+    </table>
   </article>
 
   <footer id="rodape">Rodapé</footer>
