Lições deseja aprender

--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
         <li>esta</li>
         <li>pequena</li>
       </ol>
+      <ul id="licoes_a_aprender">
+        <li>quantidade</li>
+        <li>sangue</li>
+        <li>litro</li>
+        <li>água</li>
+        <li>Perceberá</li>
+        <li>mistura</li>
+        <li>aparência</li>
+        <li>água</li>
+        <li>pura</li>
+        <li>pois</li>
+
+
+      </ul> 
     </aside>
     <table id="tabela">
       <tr>
