Estruturando posicionamentos do site

--- a/index.html
+++ b/index.html
@@ -6,12 +6,44 @@
     <title>Lições aprendidas</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
         <nav><a id="about" href="https://mztbtg.github.io/" target="_blank">Sobre mim</a></nav>
     </header>
-    <aside>
+    <main>
+        <div id="learning">
+            <ol id="licoes_aprendidas">
+                <h3>Lições aprendidas</h3>
+                <li>Linux</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet Básica</li>
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>HTML semântico</li>
+                <li>Inspect</li>
+                <li>Stack Overflow</li>
+            </ol>
+            <ol id="licoes_a_aprender">
+                <h3>Lições a aprender</h3>
+                <li>JavaScript</li>
+                <li>JavaScript ES6</li>
+                <li>React</li>
+                <li>NodeJS</li>
+                <li>Python</li>
+                <li>Dev. Front-end</li>
+                <li>Dev. Back-end</li>
+                <li>Ciências da Computação</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+            </ol>
+        </div>
+    </main>
+
+    <aside id="left_side_screen">
         <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
         <table>
             <tr>
@@ -31,19 +63,7 @@
             </tr>
         </table>
     </aside>
-    <article>
-        <ol id="licoes_aprendida">
-            <li>Linux</li>
-            <li>Bash</li>
-            <li>Git</li>
-            <li>gitHub</li>
-            <li>Internet Básica</li>
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>HTML semântico</li>
-            <li>Inspect</li>
-            <li>Stack Overflow</li>
-        </ol>
-    </article>
+
 </body>
+
 </html>
