Ajuste em artigo e secao

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </nav>
     <div id="lista_conhecimento">
       <ol id="licoes_aprendidas">
+        <h2>Conhecimentos adquiridos</h2>
         <li>Softskills</li>
         <li>Slack</li>
         <li>Zoom</li>
@@ -33,6 +34,7 @@
         <li>HTML Semântico</li>
       </ol>
       <ul id="licoes_a_aprender">
+        <h2>Conhecimentos futuros</h2>
         <li>JavaScript</li>
         <li>Lógica de Programação e Algoritmos</li>
         <li>Objetos e funções</li>
@@ -50,13 +52,29 @@
       <p>Nessas duas semanas que estou na Trybe, sinto que algo de estranho está acontecendo. Algo que talvez um físico quântico possa tentar explicar.
       O tempo aqui parece ter duas vertentes. Por um lado, sinto que o tempo passa muito rapido, pois quando vejo, o dia já acabou. Quando vejo, a semana ja passou. Temos a impressão de que o tempo voa, mas por outro lado, sinto que o aprendizado de uma semana, mas parece o aprendizado de um mês, ou dois meses de estudo.  </p>
     </article>
-    <aside>
+    <aside id="secao">
       <section>
-        <h2>Primeiros desafios</h2>
+        <h2>Primeiro desafio</h2>
         <p>Meu primeiro desafio aconteceu já na semana inicial do curso. Meu Linux parou de funcionar. Tive que recorrer aos companheiros de turma. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
         </p>
       </section>
     </aside>
+    <div id="tabela">
+      <table>
+        <tr>
+          <th>semana</th>
+          <th>Dificuldade</th>
+        </tr>
+        <tr>
+          <td>1ª</td>
+          <td>2ª</td>
+        </tr>
+        <tr>
+          <td>S/ desafios</td>
+          <td>Começou a esquentar</td>
+        </tr>
+      </table>
+    </div>
   </main>
   <footer id="rodape">
     <h6>Cristiano L Duarte, Desenvolvedor de software e web fullstack em desenvolvimento</h6>
