Lições deseja aprender Fix

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
     <a href="https://github.com/otacisos" target="_blank"> Github</a>
+
   </header>
-  <article>
   <img id="minha_foto" src="miau.jpg">
+  <article>
     <p>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
       Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
@@ -21,8 +22,8 @@
       proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
       de que obteremos a reação característica.
     </p>
+  </article>
 
-    <aside>
       <ol id="licoes_aprendidas">
         <li>Aparou</li>
         <li>numa</li>
@@ -48,7 +49,7 @@
         <li>pois</li>
 
 
-      </ul> 
+      </ul>
     </aside>
     <table id="tabela">
       <tr>
