Correcoes no layout e no HTML semantico

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Ana Luiza Machado: Lições aprendidas na Trybe</title>
 </head>
 
@@ -27,8 +27,8 @@
 </nav>
 
 <main>
-    <section id="licoes1">
-        <h4>O que eu já aprendi:</h3>
+    <section id="licoes">
+        <h2><strong>O que já aprendi:</strong></h2>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
             <li>Git</li>
@@ -41,9 +41,8 @@
             <li>Inspect</li>
             <li>Semantic HTML</li>
         </ol>
-    </section>
-
-    <section id="licoes2">
+        <br>
+        <h2><strong>Lições a aprender</strong></h2>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
@@ -60,7 +59,7 @@
 
     <section id="sobre-mim">
         <h2>Ana Luiza Machado Salgado</h2>
-        <p>Brasileira, graduanda em Arquitetura e Urbanismo pela UFOP e estudante de Desenvolvimento de Software na Trybe.</p>
+        <p id="descricao">Brasileira, graduanda em Arquitetura e Urbanismo pela UFOP e estudante de Desenvolvimento de Software na Trybe.</p>
         <p id="bh"><img src="bh.png" alt="ícone de localização" height=16px> Belo Horizonte, MG.</p>
     </section>
 
@@ -94,11 +93,15 @@
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
         <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JS para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
     </aside>
+
+    <section id="contato">
+        <h3><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=35
+        px></a>      <a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=35px></a></h3>
+    </section>
 </main>
 
 <footer id="rodape">
-    <h4>Todos os direitos reservados, Ana Luiza Machado Salgado</h4>
-    <a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=30px></a>
-    <a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=30px></a>
+    <p></p>
+    <p>Todos os direitos reservados, Ana Luiza Machado Salgado</p>
 </footer>
 </body>
