Fonte e quantidade de letras

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <aside id="secao">
       <section>
         <h2>Primeiro desafio</h2>
-        <p>Meu primeiro desafio aconteceu já na semana inicial do curso. Meu Linux parou de funcionar. Tive que recorrer aos companheiros de turma. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
+        <p>Na semana inicial do curso meu Linux parou de funcionar. Tive que recorrer aos companheiros. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
         </p>
       </section>
     </aside>
