--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#top">Sobre mim</a></li>
         <li><a href="#licoes_aprendidas">Aprendizado</a></li>
         <li><a href="#rodape">Contato</a></li>
-    </ul>    
+    </ul>  
 </nav>
 
 <main>
@@ -80,7 +80,7 @@
         </table>
     </section>
 
-    <article>
+    <article id="trybe">
         <h2>Rotina de Estudos</h2>
         <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
         </p>
